--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,11 @@
     "preview": "vite preview --port 4173"
   },
   "dependencies": {
+    "ethers": "^6.15.0",
+    "lucide-react": "^0.542.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "viem": "^2.37.5"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.1",
