--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "lucide-react": "^0.542.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "viem": "^2.37.5"
+    "viem": "^2.37.5",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.1",
