--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,14 @@
     "preview": "vite preview --port 4173"
   },
   "dependencies": {
+    "@rainbow-me/rainbowkit": "^2.2.8",
+    "@tanstack/react-query": "^5.90.2",
     "ethers": "^6.15.0",
     "lucide-react": "^0.542.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "viem": "^2.37.5",
+    "viem": "^2.38.1",
+    "wagmi": "^2.18.0",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
