--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "@rainbow-me/rainbowkit": "^2.2.8",
     "@tanstack/react-query": "^5.90.2",
+    "await-to-js": "^3.0.0",
     "axios": "^1.12.2",
     "bignumber.js": "^9.3.1",
+    "dayjs": "^1.11.18",
     "ethers": "^6.15.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.542.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
